# database-cpp-project

./: CMakeLists.txt  README.md  comparison.h  condition_parser.cpp  condition_parser_test.cpp  database.cpp  database.h  date.cpp  date.h  main.cpp  node.cpp  node.h  test_runner.cpp  test_runner.h  token.cpp  token.h
parser_nodes/: comparison.h  date_comparison_node.cpp  date_comparison_node.h  empty_node.cpp  empty_node.h  event_comparison_node.cpp  event_comparison_node.h  logical_operation.h  logical_operation_node.cpp  logical_operation_node.h  node.h
